@@ -785,6 +785,8 @@ FRAME is the existing frame."
   (activate-change-group (setq corfu--change-group (prepare-change-group)))
   (setcdr (assq #'completion-in-region-mode minor-mode-overriding-map-alist) corfu-map)
   (add-hook 'pre-command-hook #'corfu--prepare nil 'local)
+  (add-hook 'window-selection-change-functions #'corfu-quit nil 'local)
+  (add-hook 'window-buffer-change-functions #'corfu-quit nil 'local)
   (add-hook 'post-command-hook #'corfu--post-command)
   ;; Disable default post-command handling, since we have our own
   ;; checks in `corfu--post-command'.
@@ -1074,6 +1076,8 @@ AUTO is non-nil when initializing auto completion."
 (cl-defgeneric corfu--teardown ()
   "Tear-down Corfu."
   (corfu--popup-hide)
+  (remove-hook 'window-selection-change-functions #'corfu-quit 'local)
+  (remove-hook 'window-buffer-change-functions #'corfu-quit 'local)
   (remove-hook 'pre-command-hook #'corfu--prepare 'local)
   (remove-hook 'post-command-hook #'corfu--post-command)
   (when corfu--preview-ov (delete-overlay corfu--preview-ov))
@@ -1084,7 +1088,7 @@ AUTO is non-nil when initializing auto completion."
   "Sort LIST by length and alphabetically."
   (sort list #'corfu--length-string<))
 
-(defun corfu-quit ()
+(defun corfu-quit (&rest _)
   "Quit Corfu completion."
   (interactive)
   (completion-in-region-mode -1))
