@@ -5,6 +5,7 @@
 * Development
 
 - Ensure that the popup font matches the font of the parent frame.
+- Close popup when window selection changes.
 
 * Version 0.36 (2023-03-27)
 
